apps/dev/whoami/http-route-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-test
  namespace: whoami
spec:
  parentRefs:
    - name: test
      namespace: gateway
  hostnames:
    - "https-test.euclid.stonegarden.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami
          port: 80
